# predation

./: .gitignore  CMakeLists.txt  editor.cpp  editor.h  main.cpp  predation.cpp  predation.h  readme.md  rename-command-for-ice-age
game/: AnimalEntry.h  GameSettings.h  Profile.h  WeaponEntry.h
game/Application/: Kernel.cpp  Kernel.h
game/Controls/: Controller.h  GamepadController.cpp  GamepadController.h  KeyboardController.cpp  KeyboardController.h
game/Entities/: Animal.cpp  Animal.h  EntityMesh.cpp  EntityMesh.h  Hunter.cpp  Hunter.h  Skybox.cpp  Skybox.h
game/Hunt/: Camera.cpp  Camera.h  Hunt.cpp  Hunt.h
game/Hunt/Terrain/: ChunkedTerrain.cpp  ChunkedTerrain.h  ITerrain.h  RandomTerrain.cpp  SmoothedTerrain.h
game/World/: GameWorld.cpp  GameWorld.h
resources/shaders/: Bounds.frag  Bounds.vert  ChunkedTerrain.frag  ChunkedTerrain.vert  Mesh.frag  Mesh.vert  Skybox.frag  Skybox.vert  _lighting.glsl  _materials.glsl  _uniforms.glsl
src/: AppLogic.h  Application.cpp  Application.h
src/Common/: App.cpp  App.h  Application.cpp  Application.h  ocarn2.cpp  ocarn2.h
src/Common/collisions/: BoundingBox.cpp  BoundingBox.h  CollisionShape.h
src/Common/factories/: CharacterFactory.cpp  CharacterFactory.h  IFactory.h  MeshFactory.cpp  MeshFactory.h  TerrainFactory.cpp  TerrainFactory.h
src/Common/graphics/: Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h  Transform.h  UniformBuffer.cpp  Vertex.h
src/Common/models/: Character.cpp  Character.h  Terrain.cpp  Terrain.h
src/Common/utils/: Timer.h  convert_rgb5_a1_to_grayscale.cpp  convert_rgb5_a1_to_grayscale.h
src/Game/: AreaEntry.h  Game.cpp  Game.h  GameSettings.h  HuntConfig.h
src/Game/Application/: Kernel.cpp  Kernel.h
src/Game/Controls/: ComboController.cpp  ComboController.h  GamepadController.cpp  GamepadController.h  KeyboardController.h
src/Game/Entities/: Animal.h  EntityMesh.cpp  Hunter.cpp  Hunter.h  Skybox.cpp
src/Game/Hunt/: Camera.cpp  Camera.h  Hunt.cpp  Hunt.h  World.cpp  World.h
src/Game/Hunt/Terrain/: ChunkedTerrain.cpp  ITerrain.h  RandomTerrain.h  SmoothedTerrain.cpp
src/MapEditor/Data/: MapSettings.h
src/MapEditor/UI/: FileBrowser.cpp  FileBrowser.h  ui.cpp  ui.h
src/collisions/: BoundingSphere.cpp  BoundingSphere.h  CollisionShape.h
src/graphics/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.h  gl_compat.h  gl_compat_textures.h
src/utils/: Timer.cpp  Timer.h  convert_rgb5_a1_to_grayscale.cpp
tests/: rendermodel.cpp
